# GPTComparison

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/: main.py
src/analysis/: performance.py
src/brokers/: alpaca_client.py  multi_portfolio_manager.py
src/data/: providers.py  universe.py
src/portfolio/: manager.py  rebalancer.py  risk_manager.py
src/strategies/: base.py
src/strategies/llm_strategies/: base_llm.py  chatgpt.py  claude.py  deepseek.py  gemini.py
src/strategies/traditional/: mean_reversion.py  momentum.py  random_sharpe.py
src/utils/: config.py  logger.py
